cmake_minimum_required(VERSION 3.20)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode main.cpp
        #        01/TwoSum.cpp 01/TwoSum.h
        #        02/AddTwoNumbers.cpp 02/AddTwoNumbers.h
        #        03/BruteLengthOfLongestSubstring.cpp 03/BruteLengthOfLongestSubstring.h
        #        04/MedianOfTwoSortedArrays.cpp 04/MedianOfTwoSortedArrays.h
        #        05/LongestPalindromicSubstring.cpp 05/LongestPalindromicSubstring.h
        #        06/ZigzagConversion.cpp 06/ZigzagConversion.h
        #        07/reverseInteger.cpp 07/reverseInteger.h
        #        08/StringToIntegerAtoi.cpp 08/StringToIntegerAtoi.h
        #        09/PalindromeNumber.cpp 09/PalindromeNumber.h
        #        10/RegularExpressionMatching.cpp 10/RegularExpressionMatching.h
        #        11/ContainerWithMostWater.cpp 11/ContainerWithMostWater.h
        #        12/IntegerToRoman.cpp 12/IntegerToRoman.h
        #        338/CountingBits.cpp 338/CountingBits.h
        #        133/CloneGraph.cpp 133/CloneGraph.h
        #        207/CourseSchedule.cpp 207/CourseSchedule.h
        #        210/CourseSchedule2.cpp 210/CourseSchedule2.h
        #        261/AlienDictionary.cpp 261/AlienDictionary.h
        310/MinimumHeightTrees.cpp 310/MinimumHeightTrees.h
        #        1025/DivisorGame.cpp 1025/DivisorGame.h
        )
